feat: added dependencies to readme